# django-template-repo

./: .gitignore  CHANGELOG.md  README.md  manage.py  pyproject.toml  requirements.txt  ruff.toml
api/: wechat.py
apps/core/: configs.py  models.py
apps/core/management/commands/: addapp.py  genkey.py  newapp.py
apps/core/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_password_and_more.py  0002_alter_user_managers.py  0003_user_wx_openid_user_wx_session_user_wx_unionid.py
apps/template/: configs.py-tpl  urls.py-tpl
commons/: authentications.py  exceptions.py  response.py  views.py
django_template_repo/: asgi.py  settings.py  urls.py  wsgi.py
docs/: CACHES.md  DATABASE.md  STORAGE.md
scripts/: fit.py
utils/: cache.py  converters.py  http.py  models.py  request.py  string.py  views.py
