[project]
name = "django-template-repo"
version = "5.0.0"
requires-python = ">=3.10"
dependencies = [
    "Django~=5.2.14",
    "djangorestframework~=3.17.1",
    "requests~=2.34",
    "Zeraora~=0.4.0rc0",
]

[project.optional-dependencies]
dev = [
    "djangorestframework-stubs~=3.17",
    "ruff",
]

test = [
    "djangorestframework-stubs~=3.17",
    "ruff",
    "psycopg[binary,pool]~=3.3.4",
    "redis[hiredis]",
]
